@@ -1,5 +1,9 @@
 2008-06-02  Mirco Bauer <meebey@meebey.net> 
 
+	* Session.cs: Nicer code path.
+
+2008-06-02  Mirco Bauer <meebey@meebey.net> 
+
 	* Engine.mdp, Chats/ChatType.cs, Chats/ProtocolChatModel.cs,
 	  Chats/NetworkChatModel.cs: Renamed confusing NetworkChatModel to
 	  ProtocolChatModel and ChatType.Network to ChatType.Protocol.
